--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,59 +1,15 @@
 ---
-###########################
-###########################
-## Linter GitHub Actions ##
-###########################
-###########################
 name: Lint Code Base
 
-#
-# Documentation:
-# https://help.github.com/en/articles/workflow-syntax-for-github-actions
-#
-
-#############################
-# Start the job on all push #
-#############################
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
 
-###############
-# Set the Job #
-###############
 jobs:
-  build:
-    # Name the Job
-    name: Lint Code Base
-    # Set the agent to run on
-    runs-on: ubuntu-latest
-
-    ##################
-    # Load all steps #
-    ##################
-    steps:
-      ##########################
-      # Checkout the code base #
-      ##########################
-      - name: Checkout Code
-        uses: actions/checkout@v2.4.0
-        with:
-          # Full git history is needed to get a proper list of changed files within `super-linter`
-          fetch-depth: 0
-
-      ################################
-      # Run Linter against code base #
-      ################################
-      # https://github.com/marketplace/actions/super-linter
-      - name: Lint Code Base
-        uses: github/super-linter@v4.8.7
-        env:
-          # only lint changed files in each commit/PR
-          VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # disable specific linters (all enabled by default)
-          # we will use hadolint, and not dockerfilelint
-          VALIDATE_DOCKERFILE: false
+  call-super-linter:
+    # use Reusable Workflows to call my linter config remotely
+    # https://docs.github.com/en/actions/learn-github-actions/reusing-workflows
+    #FIXME: customize uri to point to your forked linter repository
+    uses: bretfisher/super-linter-workflow/.github/workflows/super-linter.yaml@main
